--- a/html2.html
+++ b/html2.html
@@ -39,5 +39,18 @@
             <li>To have fun 😃</li>
         </ui>
         
+    <aside>
+        <p><strong>Related Posts</strong></p>
+        <ul>
+            <li><img src="/IMAGES/related-1.jpg" alt="ap392840" width="100" height="100"><a href="https://sliding.toys/mystic-square/8-puzzle/daily/">How to Learn Web Development</a></p></li>
+            <p>By Jonas Header</p>
+            <li><img src="/IMAGES/related-2.jpg" alt="ap392841" width="100" height="100"><a href="https://binarypiano.com/">The Unknown Powers of CSS</a></li>
+            <p>By Hasbury Mordecai</p>
+            <li><img src="/IMAGES/related-3.jpg" alt="ap392842" width="100" height="100"><a href="https://alwaysjudgeabookbyitscover.com/">The Basic Guide to JavaScript</a></li>
+            <p>By Malda Louise</p>
+        </ul>
+        <p>Copyright © 2024 by the Code Magazine</p>
+    </aside>
     </body>
+    
 </html>
